--- a/02-Diseño/02 - Diccionario de datos/Diccionario de datos.html
+++ b/02-Diseño/02 - Diccionario de datos/Diccionario de datos.html
@@ -53,7 +53,7 @@
 <div id="title-sect">
 <h1>mydb<br> Data Dictionay</h1>
 <p>
-<em>2022-03-03</em>
+<em>2022-03-28</em>
 </p>
 <p class="proj-desc">
 <em></em>
@@ -61,16 +61,15 @@
 </div>
 <h2>Alphabetic Index</h2>
 <ul>
-<li><a href='#CabeceraDocumentoContable'>CabeceraDocumentoContable</a></li>
-<li><a href='#CabeceraPedido'>CabeceraPedido</a></li>
 <li><a href='#CarritoDeCompras'>CarritoDeCompras</a></li>
 <li><a href='#CarritoDeCompras_Producto'>CarritoDeCompras_Producto</a></li>
 <li><a href='#Categoria'>Categoria</a></li>
 <li><a href='#Categoria_Producto'>Categoria_Producto</a></li>
 <li><a href='#Ciudad'>Ciudad</a></li>
 <li><a href='#ConfirmacionPedido'>ConfirmacionPedido</a></li>
-<li><a href='#DetalleDocumentoContable'>DetalleDocumentoContable</a></li>
-<li><a href='#DetallePedido'>DetallePedido</a></li>
+<li><a href='#Direccion'>Direccion</a></li>
+<li><a href='#DocumentoContable'>DocumentoContable</a></li>
+<li><a href='#Pedido'>Pedido</a></li>
 <li><a href='#Producto'>Producto</a></li>
 <li><a href='#TipoDeEntrega'>TipoDeEntrega</a></li>
 <li><a href='#TipoDePago'>TipoDePago</a></li>
@@ -80,181 +79,6 @@
 <li><a href='#UnidadDeMedida'>UnidadDeMedida</a></li>
 <li><a href='#Usuario'>Usuario</a></li>
 </ul>
-<table id='CabeceraDocumentoContable'>
-<caption>CabeceraDocumentoContable</caption>
-<tr><td colspan='11'></td></tr>
-<tr>
-    <th>Column name</th>
-    <th>DataType</th>
-    <th><abbr title='Primary Key'>PK</abbr></th>
-    <th><abbr title='Not Null'>NN</abbr></th>
-    <th><abbr title='Unique'>UQ</abbr></th>
-    <th><abbr title='Binary'>BIN</abbr></th>
-    <th><abbr title='Unsigned'>UN</abbr></th>
-    <th><abbr title='Zero Fill'>ZF</abbr></th>
-    <th><abbr title='Auto Increment'>AI</abbr></th>
-    <th>Default</th>
-    <th>Comment</th>
-</tr>
-<tr>
-    <td>IdCabeceraDocumentoContable</td>
-    <td>INT</td>
-    <td>&#10004;</td>
-    <td>&#10004;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&#10004;</td>
-    <td></td>
-    <td></td>
-</tr>
-<tr>
-    <td>NumeroDocumentoContable</td>
-    <td>VARCHAR(45)</td>
-    <td>&nbsp;</td>
-    <td>&#10004;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td class='attr'>&nbsp;</td>
-    <td></td>
-    <td></td>
-</tr>
-<tr>
-    <td>CabeceraPedido_IdCabeceraPedido</td>
-    <td>INT</td>
-    <td>&nbsp;</td>
-    <td>&#10004;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td class='attr'>&nbsp;</td>
-    <td></td>
-    <td></td>
-</tr>
-<table id='CabeceraPedido'>
-<caption>CabeceraPedido</caption>
-<tr><td colspan='11'></td></tr>
-<tr>
-    <th>Column name</th>
-    <th>DataType</th>
-    <th><abbr title='Primary Key'>PK</abbr></th>
-    <th><abbr title='Not Null'>NN</abbr></th>
-    <th><abbr title='Unique'>UQ</abbr></th>
-    <th><abbr title='Binary'>BIN</abbr></th>
-    <th><abbr title='Unsigned'>UN</abbr></th>
-    <th><abbr title='Zero Fill'>ZF</abbr></th>
-    <th><abbr title='Auto Increment'>AI</abbr></th>
-    <th>Default</th>
-    <th>Comment</th>
-</tr>
-<tr>
-    <td>IdCabeceraPedido</td>
-    <td>INT</td>
-    <td>&#10004;</td>
-    <td>&#10004;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&#10004;</td>
-    <td></td>
-    <td></td>
-</tr>
-<tr>
-    <td>FechaPedido</td>
-    <td>DATE</td>
-    <td>&nbsp;</td>
-    <td>&#10004;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td class='attr'>&nbsp;</td>
-    <td></td>
-    <td></td>
-</tr>
-<tr>
-    <td>Estado</td>
-    <td>TINYINT</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td class='attr'>&nbsp;</td>
-    <td>0</td>
-    <td></td>
-</tr>
-<tr>
-    <td>ReferenciaDePago</td>
-    <td>VARCHAR(45)</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td class='attr'>&nbsp;</td>
-    <td>'No aplica'</td>
-    <td></td>
-</tr>
-<tr>
-    <td>Usuario_IdUsuario</td>
-    <td>INT</td>
-    <td>&nbsp;</td>
-    <td>&#10004;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td class='attr'>&nbsp;</td>
-    <td></td>
-    <td></td>
-</tr>
-<tr>
-    <td>TipodePago_IdTipoPago</td>
-    <td>INT</td>
-    <td>&nbsp;</td>
-    <td>&#10004;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td class='attr'>&nbsp;</td>
-    <td></td>
-    <td></td>
-</tr>
-<tr>
-    <td>TipoDocumentoContable_IdTipoDocumentoContable</td>
-    <td>INT</td>
-    <td>&nbsp;</td>
-    <td>&#10004;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td class='attr'>&nbsp;</td>
-    <td></td>
-    <td></td>
-</tr>
-<tr>
-    <td>TipoDeEntrega_IdTipoDeEntrega</td>
-    <td>INT</td>
-    <td>&nbsp;</td>
-    <td>&#10004;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td class='attr'>&nbsp;</td>
-    <td></td>
-    <td></td>
-</tr>
 <table id='CarritoDeCompras'>
 <caption>CarritoDeCompras</caption>
 <tr><td colspan='11'></td></tr>
@@ -299,6 +123,19 @@
 </tr>
 <tr>
     <td>Subtotal</td>
+    <td>INT</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td>0</td>
+    <td></td>
+</tr>
+<tr>
+    <td>Cantidad</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
@@ -585,8 +422,8 @@
     <td></td>
     <td></td>
 </tr>
-<table id='DetalleDocumentoContable'>
-<caption>DetalleDocumentoContable</caption>
+<table id='Direccion'>
+<caption>Direccion</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
     <th>Column name</th>
@@ -602,9 +439,61 @@
     <th>Comment</th>
 </tr>
 <tr>
-    <td>IdDetalleDocumentoContable</td>
+    <td>IdDireccion</td>
     <td>INT</td>
     <td>&#10004;</td>
+    <td>&#10004;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&#10004;</td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td>Direccion</td>
+    <td>VARCHAR(45)</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td>Barrio</td>
+    <td>VARCHAR(45)</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td>DireccionPrincipal</td>
+    <td>TINYINT</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td>0</td>
+    <td></td>
+</tr>
+<tr>
+    <td>Usuario_IdUsuario</td>
+    <td>INT</td>
+    <td>&nbsp;</td>
     <td>&#10004;</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
@@ -615,7 +504,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>CabeceraDocumentoContable_IdCabeceraDocumentoContable</td>
+    <td>Ciudad_IdCiudad</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -627,8 +516,8 @@
     <td></td>
     <td></td>
 </tr>
-<table id='DetallePedido'>
-<caption>DetallePedido</caption>
+<table id='DocumentoContable'>
+<caption>DocumentoContable</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
     <th>Column name</th>
@@ -644,7 +533,7 @@
     <th>Comment</th>
 </tr>
 <tr>
-    <td>IdDetallePedido</td>
+    <td>IdCabeceraDocumentoContable</td>
     <td>INT</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -657,20 +546,101 @@
     <td></td>
 </tr>
 <tr>
-    <td>Cantidad</td>
-    <td>INT</td>
+    <td>NumeroDocumentoContable</td>
+    <td>VARCHAR(45)</td>
     <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td>&#10004;</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td class='attr'>&nbsp;</td>
-    <td>0</td>
+    <td></td>
     <td></td>
 </tr>
 <tr>
-    <td>Subtotal</td>
+    <td>FechaCompra</td>
+    <td>DATE</td>
+    <td>&nbsp;</td>
+    <td>&#10004;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td>Pedido_IdCabeceraPedido</td>
+    <td>INT</td>
+    <td>&nbsp;</td>
+    <td>&#10004;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td></td>
+    <td></td>
+</tr>
+<table id='Pedido'>
+<caption>Pedido</caption>
+<tr><td colspan='11'></td></tr>
+<tr>
+    <th>Column name</th>
+    <th>DataType</th>
+    <th><abbr title='Primary Key'>PK</abbr></th>
+    <th><abbr title='Not Null'>NN</abbr></th>
+    <th><abbr title='Unique'>UQ</abbr></th>
+    <th><abbr title='Binary'>BIN</abbr></th>
+    <th><abbr title='Unsigned'>UN</abbr></th>
+    <th><abbr title='Zero Fill'>ZF</abbr></th>
+    <th><abbr title='Auto Increment'>AI</abbr></th>
+    <th>Default</th>
+    <th>Comment</th>
+</tr>
+<tr>
+    <td>IdCabeceraPedido</td>
+    <td>INT</td>
+    <td>&#10004;</td>
+    <td>&#10004;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&#10004;</td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td>FechaPedido</td>
+    <td>DATE</td>
+    <td>&nbsp;</td>
+    <td>&#10004;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td>Estado</td>
+    <td>VARCHAR(10)</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td>'Creado'</td>
+    <td></td>
+</tr>
+<tr>
+    <td>CostoEnvio</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
@@ -679,7 +649,7 @@
     <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td class='attr'>&nbsp;</td>
-    <td>0</td>
+    <td></td>
     <td></td>
 </tr>
 <tr>
@@ -692,11 +662,11 @@
     <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td class='attr'>&nbsp;</td>
-    <td>0</td>
+    <td></td>
     <td></td>
 </tr>
 <tr>
-    <td>Producto_IdProducto</td>
+    <td>Usuario_IdUsuario</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -709,7 +679,46 @@
     <td></td>
 </tr>
 <tr>
-    <td>CabeceraPedido_IdCabeceraPedido</td>
+    <td>TipodePago_IdTipoPago</td>
+    <td>INT</td>
+    <td>&nbsp;</td>
+    <td>&#10004;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td>TipoDocumentoContable_IdTipoDocumentoContable</td>
+    <td>INT</td>
+    <td>&nbsp;</td>
+    <td>&#10004;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td>TipoDeEntrega_IdTipoDeEntrega</td>
+    <td>INT</td>
+    <td>&nbsp;</td>
+    <td>&#10004;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td>CarritoDeCompras_IdCarritoDeCompras</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -1357,19 +1366,6 @@
     <td></td>
 </tr>
 <tr>
-    <td>Direccion</td>
-    <td>VARCHAR(70)</td>
-    <td>&nbsp;</td>
-    <td>&#10004;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td class='attr'>&nbsp;</td>
-    <td></td>
-    <td></td>
-</tr>
-<tr>
     <td>TipoDocumento_IdTipoDocumento</td>
     <td>INT</td>
     <td>&nbsp;</td>
@@ -1384,19 +1380,6 @@
 </tr>
 <tr>
     <td>TipoUsuario_IdTipoUsuario</td>
-    <td>INT</td>
-    <td>&nbsp;</td>
-    <td>&#10004;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td class='attr'>&nbsp;</td>
-    <td></td>
-    <td></td>
-</tr>
-<tr>
-    <td>Ciudad_IdCiudad</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
